- Adjustments in the presentation of the flexbox document.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   <meta name="keywords" content="HTML,CSS,FLEXBOX">
   <meta name="author" content="octa022@gmail.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+
 </head>
 <body>
   <h1>Uses of Flexbox</h1>
+  <nav>
+    <a href="./container/flexContainer.html">Flex-Container</a>
+    <a href="./grow/flexGrow.html">Flex-Grow</a>
+    <a href="./shrink/flexShrink.html">Flex-Shrink</a>
+    <a href="./wrap/flexWrap.html">Flex-wrap</a>
+  </nav>
 </body>
 </html>
