- Flex-basis uses, usage examples and their variants with flex-grow and the use of the flex property.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <a href="./container/flexContainer.html">Flex-Container</a>
     <a href="./grow/flexGrow.html">Flex-Grow</a>
     <a href="./shrink/flexShrink.html">Flex-Shrink</a>
-    <a href="./wrap/flexWrap.html">Flex-wrap</a>
+    <a href="./wrap/flexWrap.html">Flex-Wrap</a>
+    <a href="./basis/flexBasis.html">Flex-Basis</a>
   </nav>
 </body>
 </html>
