- Adjustments in the presentation of flexbox content. - Improved styles for the presentation nav.

--- a/basis/flexBasis.html
+++ b/basis/flexBasis.html
@@ -7,14 +7,19 @@
   <meta name="keywords" content="HTML,CSS,FLEXBOX">
   <meta name="author" content="octa022@gmail.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./../images/octa_ico.png">
   <link rel="stylesheet" type="text/css" href="./../css/style.css">
   <link rel="stylesheet" type="text/css" href="./basis.css">
 
 </head>
 <body>
-  <section>
+  <header>
     <h1>Uses of Flexbox</h1>
+  </header>
+  <nav>
     <a href="./../index.html">Flexbox</a>
+  </nav>
+  <section>
     <h2>Flex Basis</h2>
     
     <h3>HTML</h3>
