--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <meta name="keywords" content="HTML,CSS,FLEXBOX">
   <meta name="author" content="octa022@gmail.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="images/octa_ico.png">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <!-- <link rel="icon" href="./images/octa_ico.png"> -->
 
 </head>
 <body>
-  <h1>Uses of Flexbox</h1>
+  <header>
+    <h1>Uses of Flexbox</h1>
+  </header>
   <nav>
     <a href="./container/flexContainer.html">Flex-Container</a>
     <a href="./grow/flexGrow.html">Flex-Grow</a>
@@ -19,5 +23,6 @@
     <a href="./wrap/flexWrap.html">Flex-Wrap</a>
     <a href="./basis/flexBasis.html">Flex-Basis</a>
   </nav>
+
 </body>
 </html>
