--- a/wrap/flexWrap.html
+++ b/wrap/flexWrap.html
@@ -7,15 +7,19 @@
   <meta name="keywords" content="HTML,CSS,FLEXBOX">
   <meta name="author" content="octa022@gmail.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./../images/octa_ico.png">
   <link rel="stylesheet" type="text/css" href="./../css/style.css">
   <link rel="stylesheet" type="text/css" href="./wrap.css">
 
 </head>
 <body>
+  <header>
+    <h1>Uses of Flexbox</h1>
+  </header>
+  <nav>
+    <a href="./../index.html">Flexbox</a>
+  </nav>
   <section>
-    
-  <h1>Uses of Flexbox</h1>
-  <a href="./../index.html">Flexbox</a>
   <h2>Flex Wrap</h2>
 
   <h3>HTML</h3>
