- Agregado moedelado de input para ejemplo de componente tex-input.

--- a/basis/flexBasis.html
+++ b/basis/flexBasis.html
@@ -10,6 +10,9 @@
   <link rel="icon" href="./../images/octa_ico.png">
   <link rel="stylesheet" type="text/css" href="./../css/style.css">
   <link rel="stylesheet" type="text/css" href="./basis.css">
+  <link rel="stylesheet" href="textInput.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
 
 </head>
 <body>
@@ -251,6 +254,60 @@
       </div>
 
     </details>
+
+    <details class="grid-3">
+      <summary>
+        <h3>Caso 9</h3>
+      </summary>
+      
+      <div class="wrapper">
+        <div class="flex-container">
+          <div class="box flex one">
+            <div class="text-input">
+              <label for="field">Label 1</label>
+              <div>
+                  <input type="email" id="field" minlength="5">
+                  <span>
+                      <i class="fas fa-beer"></i>
+                      <i class="fas fa-ruler"></i>
+                  </span>
+              </div>
+              <small>Validation</small>
+            </div> <!-- / .text-input -->
+          </div>
+          <div class="box flex two">
+            <div class="text-input">
+              <label for="field">Label 1</label>
+              <div>
+                  <input type="email" id="field" minlength="5">
+                  <span>
+                      <i class="fas fa-beer"></i>
+                      <i class="fas fa-ruler"></i>
+                  </span>
+              </div>
+              <small>Validation</small>
+            </div> <!-- / .text-input -->
+          </div>
+          <div class="box flex three">
+            <div class="text-input">
+              <label for="field">Label 1</label>
+              <div>
+                  <input type="email" id="field" minlength="5">
+                  <span>
+                      <i class="fas fa-beer"></i>
+                      <i class="fas fa-ruler"></i>
+                  </span>
+              </div>
+              <small>Validation</small>
+            </div> <!-- / .text-input -->
+          </div>
+        </div>
+      </div>
+
+    </details>
+
+
+    
 
   </section>
 </body>
